...
          }
        },
        "saveButton": {
          "type": "button",
          "parentKey": "root",
          "props": {
            "text": "Save",
            "action": {
              "name": "set_data",
              "params": {
                "path": "$data.customer.saved",
                "value": true
              }
...
